<resources>
    <string name="app_name">RentIt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="Login">login</string>
    <string name="SignUp">signup</string>
    <string name="Home">Home</string>
    <string name="Yourorders">Your Orders</string>
    <string name="Profile">Profile Update</string>
    <string name="Aboutus">About Us</string>
    <string name="Contact">Contact Us</string>
    <string name="userpolicy">User Policy</string>
    <string name="LogOut">LogOut</string>
    <string name="torent">Rent item</string>
    <string name="toborrow">Borrow item</string>
    <string name="submit">Submit</string>
    <string name="numbers">Contact</string>


    <string name="SingUp">SignUp</string>
    <string name="login">login</string>
    <string name="insertuser">Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contactus">Contact Us</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_items">Your Items</string>
    <string name="contact_us">Contact Us</string>
    <string name="termsofuse">Terms Of Use</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="faqs">FAQs</string>
    <string name="give_items">Give Items On RENT</string>
    <string name="take_items">Take Items On RENT</string>
    <string name="addproductdetails">Add Product Details</string>
    <string name="string_upload_image">Upload Image</string>
    <string name="string_view_image">View Image</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
</resources>
