<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.autodice.rentit.RentItLogIn"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorwhite"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="60dp"
        android:fontFamily="cursive"
        />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:text="@string/email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:id="@+id/input_email"
            android:textColorHint="@color/colorwhite"
            android:outlineSpotShadowColor="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:id="@+id/input_password"
            android:password="true"
            android:outlineSpotShadowColor="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttoncurvy"
            android:text="@string/Login"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorwhite"
            android:layout_marginBottom="20dp"
            android:onClick="Check"
            />
        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="No account yet? Create one"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="@color/colorwhite"
            android:onClick="Signup"/>



    </LinearLayout>

</LinearLayout>


</ScrollView>