<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="60dp"
            android:fontFamily="cursive"
            />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="@string/name"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:id="@+id/input_s_username"
                android:textColorHint="@color/colorwhite"
                android:outlineSpotShadowColor="@color/colorwhite"
                android:backgroundTint="@color/colorwhite"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="@string/email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:id="@+id/input_s_email"
                android:textColorHint="@color/colorwhite"
                android:outlineSpotShadowColor="@color/colorwhite"
                android:backgroundTint="@color/colorwhite"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Gender"
                android:textColor="#ffffff"
                />
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textColor="@color/colorwhite"
                    android:buttonTint="@color/colorwhite"
                    />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:checked="true"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorwhite"
                    android:buttonTint="@color/colorwhite"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Building/flatno."
                        android:textColor="@color/colorwhite"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorwhite"
                        android:id="@+id/input_s_flatno"
                        android:textColorHint="@color/colorwhite"
                        android:outlineSpotShadowColor="@color/colorwhite"
                        android:backgroundTint="@color/colorwhite"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Street"
                        android:textColor="@color/colorwhite"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorwhite"
                        android:id="@+id/input_s_Street"
                        android:textColorHint="@color/colorwhite"
                        android:outlineSpotShadowColor="@color/colorwhite"
                        android:backgroundTint="@color/colorwhite"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LandMark"
                        android:textColor="@color/colorwhite"/>
                    <EditText
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorwhite"
                        android:id="@+id/input_s_Landmark"
                        android:textColorHint="@color/colorwhite"
                        android:outlineSpotShadowColor="@color/colorwhite"
                        android:backgroundTint="@color/colorwhite"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pincode"
                        android:textColor="@color/colorwhite"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorwhite"
                        android:id="@+id/input_s_pincode"
                        android:inputType="number"
                        android:textColorHint="@color/colorwhite"
                        android:outlineSpotShadowColor="@color/colorwhite"
                        android:backgroundTint="@color/colorwhite"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="@string/password"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:id="@+id/input_password"
                android:password="true"
                android:outlineSpotShadowColor="@color/colorwhite"
                android:backgroundTint="@color/colorwhite"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="Confirm password"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:id="@+id/input_cpassword"
                android:password="true"
                android:outlineSpotShadowColor="@color/colorwhite"
                android:backgroundTint="@color/colorwhite"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttoncurvy"
                android:text="@string/SignUp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorwhite"
                android:layout_marginBottom="20dp"
                android:onClick="CheckSignup"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
